--- a/package.json
+++ b/package.json
@@ -50,12 +50,9 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@gnosis.pm/zodiac": "^4.0.3",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
     "@mui/icons-material": "^5.14.20",
     "@mui/material": "^5.14.20",
     "@mui/x-date-pickers": "^5.0.20",
-    "@next/mdx": "^14.2.11",
     "@reduxjs/toolkit": "^2.2.6",
     "@safe-global/api-kit": "^2.4.4",
     "@safe-global/protocol-kit": "^4.1.0",
@@ -65,7 +62,6 @@
     "@safe-global/safe-modules-deployments": "^2.2.1",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
-    "@types/mdx": "^2.0.13",
     "@walletconnect/utils": "^2.16.1",
     "@walletconnect/web3wallet": "^1.15.1",
     "@web3-onboard/coinbase": "^2.2.6",
@@ -95,8 +91,6 @@
     "react-hook-form": "7.41.1",
     "react-papaparse": "^4.0.2",
     "react-redux": "^9.1.2",
-    "remark-gfm": "^4.0.0",
-    "remark-heading-id": "^1.0.1",
     "semver": "^7.6.3",
     "zodiac-roles-deployments": "^2.2.5"
   },
@@ -104,7 +98,10 @@
     "@chromatic-com/storybook": "^1.3.1",
     "@cowprotocol/app-data": "^2.1.0",
     "@faker-js/faker": "^8.1.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@next/bundle-analyzer": "^13.5.6",
+    "@next/mdx": "^14.2.11",
     "@openzeppelin/contracts": "^4.9.6",
     "@safe-global/safe-core-sdk-types": "^5.0.1",
     "@sentry/types": "^7.74.0",
@@ -127,6 +124,7 @@
     "@types/jest": "^29.5.4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.182",
+    "@types/mdx": "^2.0.13",
     "@types/node": "18.11.18",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.4",
@@ -152,6 +150,10 @@
     "jest-environment-jsdom": "^29.6.2",
     "mockdate": "^3.0.5",
     "prettier": "^2.7.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-heading-id": "^1.0.1",
+    "remark-mdx-frontmatter": "^5.0.0",
     "storybook": "^8.3.0",
     "ts-prune": "^0.10.3",
     "typechain": "^8.3.2",
