--- a/package.json
+++ b/package.json
@@ -98,7 +98,10 @@
     "@chromatic-com/storybook": "^1.3.1",
     "@cowprotocol/app-data": "^2.1.0",
     "@faker-js/faker": "^8.1.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@next/bundle-analyzer": "^13.5.6",
+    "@next/mdx": "^14.2.11",
     "@openzeppelin/contracts": "^4.9.6",
     "@safe-global/safe-core-sdk-types": "^5.0.1",
     "@sentry/types": "^7.74.0",
@@ -121,6 +124,7 @@
     "@types/jest": "^29.5.4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.182",
+    "@types/mdx": "^2.0.13",
     "@types/node": "18.11.18",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.4",
@@ -141,11 +145,16 @@
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "fake-indexeddb": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "husky": "^9.0.11",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "mockdate": "^3.0.5",
     "prettier": "^2.7.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-heading-id": "^1.0.1",
+    "remark-mdx-frontmatter": "^5.0.0",
     "storybook": "^8.3.0",
     "ts-prune": "^0.10.3",
     "typechain": "^8.3.2",
