--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,10 @@ jobs:
 
       - uses: ./.github/workflows/yarn
 
-      - uses: Maggi64/eslint-plus-action@master
+      - uses: CatChen/eslint-suggestion-action@v2
         with:
-          npmInstall: false
+          request-changes: true # optional
+          fail-check: true # optional
+          github-token: ${{ secrets.GITHUB_TOKEN }} # optional
+          directory: './' # optional
+          targets: 'src' # optional
