--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -12,6 +12,11 @@ concurrency:
 
 jobs:
   test:
+    permissions:
+      contents: write
+      checks: write
+      pull-requests: write
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,6 +24,10 @@ jobs:
       - uses: ./.github/workflows/yarn
 
       - name: Annotations and coverage report
-        uses: willcaul/jest-github-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ArtiomTr/jest-coverage-report-action@v2.3.1
+        with:
+          skip-step: install
+          annotations: failed-tests
+          package-manager: yarn
+          test-script: yarn test:ci
+          github-token: ${{ secrets.GITHUB_TOKEN }}
