--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -15,7 +15,7 @@ jobs:
     permissions:
       contents: write
       checks: write
-      pull-requests: write
+      pull-requests: read
 
     runs-on: ubuntu-latest
     steps:
