--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,7 +13,7 @@ concurrency:
 jobs:
   test:
     permissions:
-      contents: write
+      contents: read
       checks: write
       pull-requests: write
 
