--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,6 @@ NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_PRODUCTION=
 
 # Cypress wallet private keys
 CYPRESS_WALLET_CREDENTIALS=
+
+# SafeNet
+NEXT_PUBLIC_SAFENET_API_URL=
