--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.safemobile"
     },
     "web": {
       "bundler": "metro",
